<resources>
    <string name="app_name">Sensor Metrics</string>

    <string name="login_title">WELCOME</string>
    <string name="login_disclaimer">This is an application developed for a research project conducted
        by the Engineering Department, University of Cambridge,  sponsored by Research England’s
        Connecting Capability Fund award CCF18-7157 - Promoting the Internet of Things via Collaboration
        between HEIs and Industry (Pitch-In).

        \n\nThis app has been specifically developed as part of the research project “Prototyping an
        IoT platform for automated IP licensing payments”. Further details are available here:
        <a>https://pitch-in.ac.uk/projects/ip-licensing-platform/</a>

        \n\nData from all users that choose to participate in this research project will be used to
        improve a simulation prototype for usage-based licensing models in the digital economy.

        \n\nThis application will be anonymously recording in the background device usage data for
        the following features of your mobile phone: Bluetooth, Screen Time, Wifi, GPS, NFC and Torch.
        The data will be sent regularly to our UK-based servers, where it is stored unassociated with
        any personal data.

        \n\nTo start using the application, please hit the \'Next\' button.
    </string>

    <string name="consent_title">Consent of Data Collection</string>
    <string name="consent_title_page">Disclaimer</string>
    <string name="consent_disclaimer">
        This application will be anonymously recording in the background device usage data for the
        following features of your mobile phone: Bluetooth, Screentime, Wifi, GPS, NFC and Torch.
        The data will be sent regularly to our UK-based servers, where it is stored unassociated with
        any personal data.
    </string>
    <string name="consent_text">I was informed in great detail and fully understood what kind of
        device data would be processed. I hereby consent to the collection and processing of sensor
        data on my device. </string>
    <string name="consent_must_agree">You need to give consent before participating.</string>

    <string name="sensor_selection_title">Sensor Selection</string>
    <string name="sensor_wifi">WiFi</string>
    <string name="sensor_bluetooth">Bluetooth</string>
    <string name="sensor_screen_usage">Screen Usage</string>
    <string name="sensor_gps">Location</string>
    <string name="sensor_nfc">NFC</string>
    <string name="sensor_torch">Torch</string>

    <string name="sensor_color_wifi">#A9C47F</string>
    <string name="sensor_color_bluetooth">#4F868E</string>
    <string name="sensor_color_screen_usage">#A192B2</string>
    <string name="sensor_color_gps">#B04A5A</string>
    <string name="sensor_color_nfc">#F2C75C</string>
    <string name="sensor_color_torch">#7DA1C4</string>

    <string name="sensor_selection_next">Next</string>
    <string name="sensor_selection_description">Please select at least one sensor from below
        available sensor list. \n\nYou will be then asked to give permission for us to observe the
        sensors you have selected (if not granted before, or rejected)</string>
    <string name="sensor_selection_available_sensors">Available Sensors</string>
    <string name="sensor_selection_select_at_least_one">Either you haven\'t selected an available
        sensor or you rejected permission for one. In order to continue please follow our guideline.</string>

    <string name="data_collection_title">Data Collection</string>
    <string name="data_collection_start">START</string>
    <string name="data_collection_stop">STOP</string>
    <string name="data_collection_selected_sensors">Selected Sensors you want to monitor</string>
    <string name="report_screen_hint_text">* You can see the reports of collected data from the graph
        button up right corner of the screen.</string>

    <string name="report_title">Reports of Usage</string>
    <string name="report_tab_torch">Torch</string>
    <string name="report_tab_nfc">NFC</string>
    <string name="report_tab_gps">Location</string>
    <string name="report_tab_screen_usage">Screen Usage</string>
    <string name="report_tab_bluetooth">Bluetooth</string>
    <string name="report_tab_wifi">Wi-Fi</string>
    <string name="report_tab_all">All Sensors</string>
    <string name="report_usage_description">In this screen, you can see your \'%1$s\' sensor data
        for the last %2$d days. Over this period of time, your average use of this sensor was
        %3$.3f hours/day.</string>
    <string name="report_usage_all_description">In this screen, you can see all of your device sensor
        usage statistics at one place. Please change date from above selector to view a specific day.</string>
    <string name="report_no_data_found">(ø_ø)\n\nNo data found</string>
    <string name="report_usage_dates">Dates</string>
    <string name="report_usage_hours_total">Hours in Total</string>
    <string name="report_selected_time_frame">Selected time frame: </string>
    <string name="report_selected_time_date">Selected date for statistics: </string>
    <string-array name="report_time_frames">
        <item>Today</item>
        <item>Last 3 Days</item>
        <item>Last 7 Days</item>
        <item>Last 15 Days</item>
    </string-array>

    <string name="menu_item_report">Report</string>
    <string name="menu_item_settings">Settings</string>

    <string name="dialog_for_api_endpoint_message">Please write down your data host address in below box.
        This address could be given to you by the app provider or if not given, please avoid changing it.</string>
    <string name="dialog_for_api_endpoint_save">SAVE</string>
    <string name="dialog_for_api_endpoint_default">APPLY DEFAULT</string>

    <string name="user_message_alert_title">Something is wrong</string>
    <string name="user_message_title">We need your permission!</string>
    <string name="user_message_title_wifi">Wi-Fi</string>
    <string name="user_message_title_bluetooth">Bluetooth</string>
    <string name="user_message_title_screen_usage">Screen Usage</string>
    <string name="user_message_title_gps">Location</string>
    <string name="user_message_title_nfc">NFC</string>
    <string name="user_message_message">
        In order to collect your data on %1$s, we need your consent. The data collected on this sensor
        will be stored locally on your phone in the app and uploaded to our servers. This data will
        not be associated with your personal identity in any way, and it will solely be used for this
        particular research project. By participating in this research project by hitting the next
        button I consent for my %2$s data to be used for this project.
    </string>

    <string name="user_message_positive">I give my consent</string>
    <string name="user_message_negative">Cancel</string>
    <string name="user_message_sensor_activation_title">Activation of Sensor</string>
    <string name="user_message_sensor_activation_message">%1$s seems to be disabled. Do you want to
        turn it on?</string>
    <string name="user_message_sensor_own_activation_message">Due to security measures taken by
        Google, we are not allowed to turn on %1$s on your behalf. Please turn on the sensor if
        you would like to collect data.</string>

    <string name="user_message_sensor_activation_confirm">Yes, please</string>
    <string name="user_message_sensor_activation_reject">No, thanks</string>
    <string name="user_message_sensor_activation_ok">Go to Settings</string>

    <string name="sensor_item_enabled">ON</string>
    <string name="sensor_item_disabled">OFF</string>

    <string name="service_description">The service is enabled and currently collection data.
        Due to security measures taken byAndroid, we are bound to show this notification to you.</string>

    <string name="content_description_app_logo">ALPS Software Ltd</string>
    <string name="content_description_ifm_logo">Innovation and IP Management LAB</string>
    <string name="content_description_icon_sensor">Sensor element</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>