<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".reporting.AllSensorReportFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_material"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_small"
            android:textSize="@dimen/body_text_size"
            android:text="@string/report_selected_time_date"/>

        <Spinner
            android:id="@+id/sp_all_data_day_frame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_all_data_report_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_material"
        android:layout_marginVertical="@dimen/margin_small"
        android:textSize="@dimen/body_text_size"
        android:text="@string/report_usage_all_description"/>

    <RelativeLayout
        android:id="@+id/rl_all_data_no_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_material"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="@dimen/large_header_text_size"
            android:text="@string/report_no_data_found"/>

    </RelativeLayout>

    <com.anychart.AnyChartView
        android:id="@+id/all_sensor_usage_chart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_material"/>

    <ProgressBar
        android:id="@+id/all_sensor_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>