<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_material"
    android:orientation="vertical"
    tools:context=".SensorSelectionActivity" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_material"
        android:textSize="@dimen/large_body_text_size"
        android:text="@string/sensor_selection_description"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_small"
        android:gravity="center_horizontal"
        android:textSize="@dimen/large_header_text_size"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/sensor_selection_available_sensors"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.alpsproject.devicetracking.views.SensorView
                android:id="@+id/sensor_view_wifi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.alpsproject.devicetracking.views.SensorView
                android:id="@+id/sensor_view_bluetooth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.alpsproject.devicetracking.views.SensorView
                android:id="@+id/sensor_view_screen_usage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.alpsproject.devicetracking.views.SensorView
                android:id="@+id/sensor_view_gps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.alpsproject.devicetracking.views.SensorView
                android:id="@+id/sensor_view_nfc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:layout_gravity="center_horizontal">

                <Button
                    android:id="@+id/btn_next_data_collection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:text="@string/sensor_selection_next" />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>