<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:fillViewport="true"
    tools:context=".ConsentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_material"
        android:layout_marginTop="@dimen/margin_material"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_material"
            android:gravity="center"
            android:textSize="@dimen/large_header_text_size"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_disclaimer_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/body_text_size"/>

        <RelativeLayout
            android:id="@+id/rl_consent"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/margin_material"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/cb_consent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"/>

            <TextView
                android:id="@+id/tv_consent_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/cb_consent"
                android:layout_centerInParent="true"
                android:textSize="@dimen/body_text_size"/>

        </RelativeLayout>

        <!-- Filler for the blank space -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_consent_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/sensor_selection_next" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-8dp"
            android:orientation="horizontal"
            android:background="@color/white">

            <ImageView
                android:id="@+id/iv_footer_iipm_logo"
                android:layout_width="0dp"
                android:layout_height="@dimen/app_logo_size_small"
                android:layout_weight="1"
                android:padding="@dimen/margin_small"
                android:src="@drawable/ic_iipm_logo"
                android:contentDescription="@string/content_description_ifm_logo" />

            <ImageView
                android:id="@+id/iv_footer_camp_logo"
                android:layout_width="0dp"
                android:layout_height="@dimen/app_logo_size_small"
                android:layout_weight="1"
                android:padding="@dimen/margin_small"
                android:src="@drawable/ic_camp_logo"
                android:contentDescription="@string/content_description_app_logo" />

            <ImageView
                android:id="@+id/iv_footer_pitch_logo"
                android:layout_width="0dp"
                android:layout_height="@dimen/app_logo_size_small"
                android:layout_weight="1"
                android:padding="@dimen/margin_small"
                android:src="@drawable/ic_pitch_logo"
                android:contentDescription="@string/content_description_ifm_logo" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>