<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_material"
        android:orientation="vertical"
        android:gravity="center"
        tools:context=".LoginActivity" >

        <ImageView
            android:id="@+id/iv_alps_logo"
            android:layout_width="@dimen/app_logo_size"
            android:layout_height="@dimen/app_logo_size"
            android:padding="@dimen/margin_small"
            android:src="@drawable/ic_alps_logo"
            android:contentDescription="@string/content_description_app_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/iv_iipm_logo"
                android:layout_width="@dimen/app_logo_size"
                android:layout_height="@dimen/app_logo_size"
                android:padding="@dimen/margin_small"
                android:src="@drawable/ic_iipm_logo"
                android:contentDescription="@string/content_description_ifm_logo" />

            <ImageView
                android:id="@+id/iv_camp_logo"
                android:layout_width="@dimen/app_logo_size"
                android:layout_height="@dimen/app_logo_size"
                android:padding="@dimen/margin_small"
                android:src="@drawable/ic_camp_logo"
                android:contentDescription="@string/content_description_app_logo" />

            <ImageView
                android:id="@+id/iv_pitch_logo"
                android:layout_width="@dimen/app_logo_size"
                android:layout_height="@dimen/app_logo_size"
                android:padding="@dimen/margin_small"
                android:src="@drawable/ic_pitch_logo"
                android:contentDescription="@string/content_description_ifm_logo" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/header_text_size"
            android:layout_margin="@dimen/margin_small"
            android:gravity="center"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_disclaimer_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:textSize="@dimen/body_text_size"
            android:autoLink="web"
            android:singleLine="false"/>

        <Button
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_material"
            android:text="@string/sensor_selection_next" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/iv_footer_iipm_logo"
                android:layout_width="@dimen/app_logo_size_small"
                android:layout_height="@dimen/app_logo_size_small"
                android:padding="@dimen/margin_material"
                android:src="@drawable/ic_iipm_logo"
                android:contentDescription="@string/content_description_ifm_logo" />

            <ImageView
                android:id="@+id/iv_footer_camp_logo"
                android:layout_width="@dimen/app_logo_size_small"
                android:layout_height="@dimen/app_logo_size_small"
                android:padding="@dimen/margin_material"
                android:src="@drawable/ic_camp_logo"
                android:contentDescription="@string/content_description_app_logo" />

            <ImageView
                android:id="@+id/iv_footer_pitch_logo"
                android:layout_width="@dimen/app_logo_size_small"
                android:layout_height="@dimen/app_logo_size_small"
                android:padding="@dimen/margin_material"
                android:src="@drawable/ic_pitch_logo"
                android:contentDescription="@string/content_description_ifm_logo" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>
